edition = "2023";  // successor to proto2 and proto3

package storage;
import "google/protobuf/go_features.proto";

option go_package = "./storage;storage";
option java_package = "io.stackrox.proto.storage";
option features.(pb.go).api_level = API_HYBRID;

enum TaintEffect {
  UNKNOWN_TAINT_EFFECT = 0;
  NO_SCHEDULE_TAINT_EFFECT = 1;
  PREFER_NO_SCHEDULE_TAINT_EFFECT = 2;
  NO_EXECUTE_TAINT_EFFECT = 3;
}

message Taint {
  string key = 1; // @gotags: search:"Taint Key"
  string value = 2; // @gotags: search:"Taint Value"
  TaintEffect taint_effect = 3; // @gotags: search:"Taint Effect"
}

message Toleration {
  enum Operator {
    TOLERATION_OPERATION_UNKNOWN = 0;
    TOLERATION_OPERATOR_EXISTS = 1;
    TOLERATION_OPERATOR_EQUAL = 2;
  }

  string key = 1; // @gotags: search:"Toleration Key"
  Operator operator = 2;
  string value = 3; // @gotags: search:"Toleration Value"
  TaintEffect taint_effect = 4;
}
